# ynet

./: .gitignore  README.md  package-lock.json  package.json
core/: Cargo.toml
core/chain/: Cargo.toml
core/chain/src/: block.rs  blockchain.rs  economics.rs  lib.rs  transaction.rs  wallet.rs
core/data/: wallet.json
core/inference/: Cargo.toml
core/inference/src/: failover.rs  gateway.rs  lib.rs  registry.rs  reputation.rs  router.rs  service.rs  sharding.rs  types.rs  utils.rs
core/node/: Cargo.toml
core/node/src/: main.rs
core/p2p/: Cargo.toml
core/p2p/src/: lib.rs  network.rs
core/scheduler/: Cargo.toml
core/scheduler/src/: executor.rs  lib.rs  task.rs
desktop/: electron-builder.yml  package.json  tsconfig.json  tsconfig.main.json
desktop/src/bridge/: core-bridge.ts  preload.ts
desktop/src/main/: index.ts
desktop/src/renderer/: App.tsx  index.html  styles.css
desktop/src/renderer/components/: Inference.tsx  Network.tsx  Tasks.tsx  Wallet.tsx
docs/roadmap/: phase2-requirements.md
scripts/: deploy-inference.sh
