[package]
name = "ynet-chain"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
