[package]
name = "ynet-node"
version.workspace = true
edition.workspace = true

[dependencies]
ynet-p2p = { path = "../p2p" }
ynet-chain = { path = "../chain" }
ynet-scheduler = { path = "../scheduler" }
ynet-inference = { path = "../inference" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
futures = "0.3"
